fix(core-price-lockup): update spacings

--- a/packages/PriceLockup/PriceLockup.modules.scss
+++ b/packages/PriceLockup/PriceLockup.modules.scss
@@ -55,7 +55,6 @@
 
 .priceWrapper {
   align-items: flex-end;
-  margin-bottom: 8px;
 
   &.small > span {
     line-height: 1;
